<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMTE41_App</string>
    <string name="action_settings">Settings</string>
    <string name="new_location">New location</string>
    <string name="nearby_location">Nearby location</string>
    <string name="search_location">Search location</string>
    <string name="story_map">Story map</string>
    <string name="title_activity_new_location">NewLocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nearby_location">NearbyLocation</string>
    <string name="title_activity_search_location">SearchLocation</string>
    <string name="title_activity_story_map">StoryMap</string>
    <string name="search_location_name">Search location name</string>
    <string name="save_location">Save location</string>
    <string name="search_name">Search location by name:</string>
    <string name="search">Search</string>
    <string name="titel">Titel: </string>
    <string name="description">Description: </string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="name_location">Name location</string>
    <string name="location_description">Location description</string>
    <string name="photo">Take Photo</string>
    <string name="title_activity_load_screen">LoadScreen</string>
    <string name="location_manager">Location Manager</string>
    <string name="title_activity_location">Location</string>
    <string name="locations_within">Locations within: </string>

</resources>