<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewLocation" 
    android:orientation="vertical"
    style="@style/AppTheme">

    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titel" />
        
    	<EditText 
        style="@style/textview"
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_location" 
        />
    	
    	<ImageButton
        android:id="@+id/photo_button"
        android:background="#0000"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:src="@drawable/camera"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo"
        android:layout_margin="10dp"
        ></ImageButton>
    
    </LinearLayout>
   	
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="fill_parent">
    	
        <TextView
        android:id="@+id/tf_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" 
        android:layout_alignParentTop="true"
        />
        
       
        
        <Button
        android:id="@+id/save_location"
        style="@style/button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/save_location" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>
        
        <Button
        android:id="@+id/cancel"
        style="@style/button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
        
   		<EditText 
        style="@style/textview"
        android:id="@+id/edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/location_description"
        android:layout_below="@id/tf_description"
        android:layout_above="@id/save_location" 
		android:gravity="top"/>   
    
   		 <ImageView 
            android:id="@+id/iv_preview"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_toRightOf="@id/edit_description"
            android:contentDescription="@string/title_activity_load_screen"
            android:layout_above="@id/save_location"
            android:layout_below="@id/tf_description"
            />
   		
	</RelativeLayout>
	
</LinearLayout>