<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchLocation" 
    android:orientation="vertical"
    style="@style/AppTheme">	
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_name"/>
    
    <EditText 
        style="@style/textview"
        android:id="@+id/edit_search"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:hint="@string/search_location_name"
        android:layout_weight="1"
        android:gravity="top"/>
    

    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
        <Button
        android:id="@+id/search_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_weight="1"/>
        
        <Button
        android:id="@+id/back_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_weight="1"/>
        
	</LinearLayout>
	
</LinearLayout>