<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_manager" 
        android:gravity="center_horizontal"
        android:textSize="30sp"/>
    
<Button 
	        style="@style/button"
	        android:id="@+id/new_location"
	        android:text="@string/new_location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
	        />
<Button 
	        style="@style/button"
	        android:id="@+id/nearby_location"
	        android:text="@string/nearby_location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
	        />
<Button 
	        style="@style/button"
	        android:id="@+id/search_location"
	        android:text="@string/search_location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1"
	        />
</LinearLayout>